--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-bootcamp",
-  "homepage": "https://astar.newturing.ai/",
+  "homepage": "https://gstar.newturing.ai/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
